<resources>     <!-- Main Screen -->
    <string name="app_name">FinalProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Smart Remote</string>
    <string name="main_automobile">Automobile</string>
    <string name="main_house">House</string>
    <string name="main_kitchen">Kitchen</string>
    <string name="main_livingroom">Living Room</string>
    <string name="title_activity_automobile_temperature">AutomobileTemperature</string>
    <string name="title_automobilelist_list">AutomobileLists</string>
    <string name="title_automobilelist_detail">AutomobileList Detail</string>
    <string name="title_activity_automobile_temp">AutomobileTemp</string>
    <string name="a_text_drive">Drive</string>
    <string name="a_text_stop">Stop</string>
    <string name="a_text_driving">Driving</string>
    <string name="a_text_check_oil">Check Oil</string>
    <string name="a_text_headlight">Headlight</string>
    <string name="a_text_turn_on">Turn On</string>
    <string name="a_text_turn_off">Turn Off</string>
    <string name="a_text_normal">Normal</string>
    <string name="a_text_high">High</string>
    <string name="a_text_dimmable_light">Dimmable Light</string>
    <string name="a_text_reset">Reset</string>
    <string name="a_text_km_h">km/h</string>
    <string name="a_text_fm">FM</string>
    <string name="a_text_front">Front</string>
    <string name="a_text_back">Back</string>

    <!-- Garage Door -->
    <string name="openGarageButton">Open Garage</string>
    <string name="closeGarageButton">Close Garage</string>
    <string name="lightON_OFF">Light(ON/OFF)</string>

    <!-- House Temperature -->
    <string name="houseTempLabel">Your house is currently set at</string>
    <string name="houseTempTextview">House Temperature</string>
    <string name="tempSettingButton">Temperature Setting</string>
    <string name="TemperatureSettingLabel">Temperature Setting</string>
    <string name="setTimeButton">Select a time</string>
    <string name="setTempButton">Select a temperature</string>
    <string name="createSchedule">Insert new temperature schedule</string>
    <string name="setTempSchedule">View schedule list</string>
    <string name="delete">Delete temperature schedule</string>
    <string name="deleteLabel">Enter key id to delete a temperature schedule</string>


    <!-- Outside Weather -->
    <string name="currentTempTextview">Current Temperature</string>
    <string name="minTempTextview">Minimum Temperature</string>
    <string name="maxTempTextview">Maximum Temperature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
