<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cst2335.finalproject.HouseSettingFragment">

    <TextView
        android:text="@string/houseTempTextview"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:id="@+id/temperature"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="42dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/downarrow"
        android:id="@+id/downArrowImageButton"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/upArrowImageButton"
        android:layout_toEndOf="@+id/temperature"
        android:layout_marginStart="23dp" />

    <ImageButton
        android:layout_width="42dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/up1"
        android:id="@+id/upArrowImageButton"
        android:layout_alignTop="@+id/temperature"
        android:layout_alignStart="@+id/downArrowImageButton" />

    <TextView
        android:text="@string/houseTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:id="@+id/houseTempLabel"
        android:textSize="20sp"
        android:layout_above="@+id/upArrowImageButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="52dp" />

    <Button
        android:text="@string/tempSettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempSettingButton"
        android:layout_below="@+id/downArrowImageButton"
        android:layout_toStartOf="@+id/upArrowImageButton" />

</RelativeLayout>
